--- a/assets/scss/pages/_store-zhongshan.scss
+++ b/assets/scss/pages/_store-zhongshan.scss
@@ -5,7 +5,7 @@
         flex-direction: row;
         justify-content: space-between;
     }
-    @include mobile{
+    @include mobile-large{
       flex-direction: column;  
     }
 }
@@ -26,7 +26,7 @@
         margin-top: 24px;
     }
 }
-@include mobile{
+@include mobile-large{
     .store-card-rwd{
         width: 100%;
     }
